k8s/ingress.yml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatgpt-ing
  namespace: chatgpt
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: chatgpt.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatgpt-frontend-svc
            port:
              number: 3000
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: chatgpt-backend-svc
            port:
              number: 8000
